// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-node-operators-registry e2e tests should process tx with added Node operator 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "STAKING-ROUTER-NOT-DEPLOYED",
    "description": "Probably StakingRouter is not deployed yet",
    "labels": Array [],
    "metadata": Object {
      "stack": "call revert exception [ See: https://links.ethers.org/v5-errors-CALL_EXCEPTION ] (method=\\"getAllNodeOperatorDigests(uint256)\\", data=\\"0x\\", errorArgs=null, errorName=null, errorSignature=null, reason=null, code=CALL_EXCEPTION, version=abi/5.7.0)",
    },
    "name": "StakingRouter.getAllNodeOperatorDigests error",
    "protocol": "ethereum",
    "severity": 1,
    "type": 2,
  },
  Finding {
    "addresses": Array [],
    "alertId": "NODE-OPERATOR-ADDED",
    "description": "Node operator 29 added
Name: Attestant (BVI) Limited
Reward address: 0xcd51df5142156BD92E7A9494Dd2b9362f5078D64
StakingLimit: 0",
    "labels": Array [],
    "metadata": Object {
      "args": "29,Attestant (BVI) Limited,0xcd51df5142156BD92E7A9494Dd2b9362f5078D64,0",
    },
    "name": "ℹ️ NO Registry: Node operator added",
    "protocol": "ethereum",
    "severity": 1,
    "type": 4,
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with removed signing keys 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "STAKING-ROUTER-NOT-DEPLOYED",
    "description": "Probably StakingRouter is not deployed yet",
    "labels": Array [],
    "metadata": Object {
      "stack": "call revert exception [ See: https://links.ethers.org/v5-errors-CALL_EXCEPTION ] (method=\\"getAllNodeOperatorDigests(uint256)\\", data=\\"0x\\", errorArgs=null, errorName=null, errorSignature=null, reason=null, code=CALL_EXCEPTION, version=abi/5.7.0)",
    },
    "name": "StakingRouter.getAllNodeOperatorDigests error",
    "protocol": "ethereum",
    "severity": 1,
    "type": 2,
  },
  Finding {
    "addresses": Array [],
    "alertId": "NODE-OPERATORS-KEYS-REMOVED",
    "description": "1 signing keys removed",
    "labels": Array [],
    "metadata": Object {},
    "name": "🚨 NO Registry: Signing keys removed",
    "protocol": "ethereum",
    "severity": 4,
    "type": 4,
  },
]
`;

exports[`agent-node-operators-registry e2e tests should process tx with set NO Stake limit by NON-EasyTrack action 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "STAKING-ROUTER-NOT-DEPLOYED",
    "description": "Probably StakingRouter is not deployed yet",
    "labels": Array [],
    "metadata": Object {
      "stack": "call revert exception [ See: https://links.ethers.org/v5-errors-CALL_EXCEPTION ] (method=\\"getAllNodeOperatorDigests(uint256)\\", data=\\"0x\\", errorArgs=null, errorName=null, errorSignature=null, reason=null, code=CALL_EXCEPTION, version=abi/5.7.0)",
    },
    "name": "StakingRouter.getAllNodeOperatorDigests error",
    "protocol": "ethereum",
    "severity": 1,
    "type": 2,
  },
  Finding {
    "addresses": Array [],
    "alertId": "NODE-OPERATORS-STAKING-LIMIT-SET",
    "description": "Staking limit for node operator 13 was set to 3800 by NON-EasyTrack motion!",
    "labels": Array [],
    "metadata": Object {},
    "name": "🚨 NO Stake limit set by NON-EasyTrack action",
    "protocol": "ethereum",
    "severity": 4,
    "type": 4,
  },
]
`;
